auth_service/src/main/java/com/example/auth_service/errors/InvalidPasswordException.java
package com.example.auth_service.errors;

public class InvalidPasswordException extends RuntimeException {
    private static final Long serialVersionID = 1L;
    
    public InvalidPasswordException() { 
        super("Invalid password");
    }
}
